--- a/app/client/templates/components/menu.scss
+++ b/app/client/templates/components/menu.scss
@@ -3,6 +3,7 @@
 .menu-container {
 
   position: relative;
+  float: left;
   background-color: $menu-bg;
   color: $menu-text;
   width: $menu-width;
