moved from Iron Router to Flow Router

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -2,22 +2,22 @@
 
   <nav class="menu-container">
 
-    <div class="menu-link active {{isActivePath regex='app-market'}}">
+    <div class="menu-link active">
       <i class="fa fa-building app-market icon"></i>
       <div class="menu-text">App Market</div>
     </div>
 
-    <div class="menu-link {{isActivePath regex='installed-apps'}}">
+    <div class="menu-link">
       <i class="fa fa-cubes installed-apps icon"></i>
       <div class="menu-text">Installed Apps</div>
     </div>
 
-    <div class="menu-link {{isActivePath regex='apps-by-me'}}">
+    <div class="menu-link">
       <i class="fa fa-user apps-by-me icon"></i>
       <div class="menu-text">Apps by Me</div>
     </div>
 
-    <div class="menu-link {{isActivePath regex='upload-an-app'}}">
+    <div class="menu-link">
       <i class="fa fa-arrow-circle-up upload-an-app icon"></i>
       <div class="menu-text">Upload an App</div>
     </div>
