--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -1,5 +1,5 @@
 <template name="MasterLayout">
   {{> Topbar}}
   {{> Menu}}
-  {{> yield}}
+  {{> Template.dynamic template=mainSection}}
 </template>
