--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -37,52 +37,53 @@ $main-page-bg: #e7e4ea;
 $welcome-message-bg: #a58faa;
 
 // SPACING
-$topbar-height: 102px;
-$topbar-logo-font-size: 26px;
-$topbar-logo-icon-size: 55px;
-$topbar-logo-margin-left: 30px;
-$topbar-padding-bottom: 20px;
-$topbar-item-margin-left: 385px;
-$topbar-item-font-size: 14px;
-$topbar-item-padding-lr: 22px;
-$topbar-item-padding-tb: 10px;
-$topbar-item-margin-right: 5px;
+$topbar-height: 8.5rem;
+$topbar-logo-font-size: 2.167rem;
+$topbar-logo-icon-size: 4.583rem;
+$topbar-logo-margin-left: 2.5rem;
+$topbar-padding-bottom: 1.667rem;
+$topbar-item-margin-left: 32.083rem;
+$topbar-item-font-size: 1.167rem;
+$topbar-item-padding-lr: 1.833rem;
+$topbar-item-padding-tb: 0.833rem;
+$topbar-item-margin-right: 0.417rem;
 
-$menu-width: 320px;
-$menu-item-padding-left: 30px;
-$menu-font-size: 26px;
-$menu-icon-size: 40px;
-$menu-item-padding-tb: 28px;
-$menu-box-shadow: 3px 3px $app-box-drp-shdw;
+$menu-width: 26.667rem;
+$menu-item-padding-left: 2.5rem;
+$menu-font-size: 2.167rem;
+$menu-icon-size: 3.333rem;
+$menu-item-padding-tb: 2.333rem;
+$menu-box-shadow: 0.25rem 0.25rem $app-box-drp-shdw;
 
-$app-section-width: 1250px;
-$app-section-padding-left: 96px;
-$app-genre-margin-top: 65px;
-$app-genre-margin-bottom: 16px;
-$app-container-width: 20%;
-$app-container-margin-lr: 14px;
-$app-container-padding-lr: 20px;
-$app-container-padding-tb: 15px;
-$app-container-box-shadow: 1px 2px $app-box-drp-shdw;
-$app-container-margin-bottom: 58px;
-$app-genre-font-size: 24px;
-$app-name-font-size: 20px;
-$app-name-line-height: 32px;
-$app-author-font-size: 14px;
-$app-author-line-height: 24px;
-$star-font-size: 14px;
-$star-line-height: 24px;
-$app-install-font-size: 13px;
-$app-install-padding-tb: 3px;
-$app-install-padding-lr: 14px;
-$app-price-font-size: 13px;
+$app-section-width: 104.167rem;
+$app-section-padding-left: 8rem;
+$app-genre-margin-top: 5.417rem;
+$app-genre-margin-bottom: 1.333rem;
+$app-container-width: 0.167rem;
+$app-container-margin-lr: 1.167rem;
+$app-container-padding-lr: 1.667rem;
+$app-container-padding-tb: 1.25rem;
+$app-container-box-shadow: 0.083rem 0.166rem $app-box-drp-shdw;
+$app-container-margin-bottom: 4.833rem;
+$app-genre-font-size: 2rem;
+$app-name-font-size: 1.667rem;
+$app-name-line-height: 2.667rem;
+$app-author-font-size: 1.167rem;
+$app-author-line-height: 2rem;
+$star-font-size: 1.167rem;
+$star-line-height: 2rem;
+$app-install-font-size: 1.083rem;
+$app-install-padding-tb: 0.25rem;
+$app-install-padding-lr: 1.167rem;
+$app-price-font-size: 1.083rem;
 
-$welcome-message-height: 196px;
+$welcome-message-height: 16.333rem;
 
 html {
   font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-  font-size: 2vmax;
+  font-size: 12px;
+  font-size: 0.65vw;
 
   body {
     margin: 0;
