--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -36,6 +36,8 @@ $main-page-bg: #e7e4ea;
 
 $welcome-message-bg: #a58faa;
 
+$genre-popular-bg: #a58faa;
+
 // SPACING
 $topbar-height: 8.5rem;
 $topbar-logo-font-size: 2.167rem;
@@ -59,7 +61,9 @@ $app-section-width: 104.167rem;
 $app-section-padding-left: 8rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
-$app-container-width: 0.167rem;
+$app-container-width: 20%;
+$app-container-width-large: 60%;
+$app-container-min-width: 180px;
 $app-container-margin-lr: 1.167rem;
 $app-container-padding-lr: 1.667rem;
 $app-container-padding-tb: 1.25rem;
@@ -78,6 +82,11 @@ $app-install-padding-lr: 1.167rem;
 $app-price-font-size: 1.083rem;
 
 $welcome-message-height: 16.333rem;
+
+$genre-page-title-height: 3.333rem;
+$genre-page-popular-height: 2.5rem;
+$genre-page-popular-margin-top: 2.5rem;
+$genre-page-popular-margin-bottom: 2rem;
 
 html {
   font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
