--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -1,26 +1,68 @@
 <template name="appItem">
 
-  <div class="app-item-container">
+  <div class="app-item-container {{size}}">
 
-    <div class="image-surround">
+    {{#if equal size "large"}}
 
-      <div class="image" style="background-image: {{image}};"></div>
+      {{#with app}}
 
-    </div>
+      <div class="image-surround">
 
-    <div class="app-name">{{name}}</div>
+        <div class="image" style="background-image: url('{{image}}');"></div>
 
-    <div class="app-author">{{author}}</div>
+      </div>
 
-    <div class="app-rating">{{{appRating stars}}}</div>
+      <div class="text-section">
 
-    <div class="app-install {{#if installed}}installed{{/if}}">
-      INSTALL <i class="play icon fa fa-play"></i>
-    </div>
+        <div class="app-name">{{name}}</div>
 
-    <div class="app-price {{#if free price}}free{{/if}}">
-      {{#if free price}}FREE{{else}}{{price}}{{/if}}
-    </div>
+        <div class="app-author">{{getUsername author}}</div>
+
+        <div class="app-rating">{{{appRating stars}}}</div>
+
+        <div class="app-install {{#if installed}}installed{{/if}}">
+          INSTALL <i class="play icon fa fa-play"></i>
+        </div>
+
+        <div class="app-price {{#if free price}}free{{/if}}">
+          {{#if free price}}FREE{{else}}{{price}}{{/if}}
+        </div>
+
+      </div>
+
+      {{/with}}
+
+    {{else}}
+
+      {{#with app}}
+
+      <div class="image-surround large">
+
+        <div class="image" style="background-image: url('{{image}}');"></div>
+
+      </div>
+
+      <div class="text-section">
+
+        <div class="app-name">{{name}}</div>
+
+        <div class="app-author">{{getUsername author}}</div>
+
+        <div class="app-rating">{{{appRating stars}}}</div>
+
+        <div class="app-install {{#if installed}}installed{{/if}}">
+          INSTALL <i class="play icon fa fa-play"></i>
+        </div>
+
+        <div class="app-price {{#if free price}}free{{/if}}">
+          {{#if free price}}FREE{{else}}{{price}}{{/if}}
+        </div>
+
+      </div>
+
+      {{/with}}
+
+    {{/if}}
 
   </div>
 
