--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -24,6 +24,7 @@ $app-box-drp-shdw: #a694b2;
 $app-name-text: #222222;
 $app-author-text: #783189;
 $app-install-text: #783189;
+$app-description-text: #222222;
 $app-install-bg: #eee4f4;
 $app-install-icon-col: #c9add0;
 $star-col: #783189;
@@ -61,8 +62,8 @@ $app-section-width: 104.167rem;
 $app-section-padding-left: 8rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
-$app-container-width: 20%;
-$app-container-width-large: 60%;
+$app-container-width: 18.5%;
+$app-container-width-large: 55%;
 $app-container-min-width: 180px;
 $app-container-margin-lr: 1.167rem;
 $app-container-padding-lr: 1.667rem;
@@ -70,10 +71,16 @@ $app-container-padding-tb: 1.25rem;
 $app-container-box-shadow: 0.083rem 0.166rem $app-box-drp-shdw;
 $app-container-margin-bottom: 4.833rem;
 $app-genre-font-size: 2rem;
+$app-image-large-width: 40.5%;
+$app-image-large-max-height: 25rem;
+$app-image-large-margin-right: 2.5rem;
 $app-name-font-size: 1.667rem;
+$app-name-large-font-size: 2.9rem;
 $app-name-line-height: 2.667rem;
 $app-author-font-size: 1.167rem;
+$app-author-large-font-size: 1.667rem;
 $app-author-line-height: 2rem;
+$app-description-large-font-size: 1.333rem;
 $star-font-size: 1.167rem;
 $star-line-height: 2rem;
 $app-install-font-size: 1.083rem;
