implemented topbar routing

--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -13,7 +13,7 @@
 
       {{#each genres}}
 
-        <a class="genre-box {{#if active}}active{{/if}}" href="{{pathFor route=route}}">{{name}}</a>
+        <a class="genre-box {{#if active}}active{{/if}}" href="/genres/{{name}}">{{name}}</a>
 
       {{/each}}
 
