--- a/app/client/templates/genres/genre.scss
+++ b/app/client/templates/genres/genre.scss
@@ -1,6 +1,8 @@
-@import "../../stylesheets/main";
+@import "../../stylesheets/variables";
 
-.genre-popular {
+.genre-popular-section {
+
+  background-color: $genre-popular-bg;
 
   .content {
 
