--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -1,105 +1,17 @@
 // JUST A PLACEHOLDER UNTIL I GET A PROPER FONT
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic);
 
-// COLORS
-$menu-active-text: #ffffff;
-$menu-active-bg: #a460ba;
-$menu-active-icon-col: #bb8acc;
-$menu-text: #783189;
-$menu-bg: #ffffff;
-$menu-icon-col: #ddc9e8;
-$menu-divider-col: #e7daea;
-
-$topbar-bg: #612c7d; // THIS IS TEMPORARY
-$topbar-logo-text: #ffffff;
-$topbar-item-text: #ffffff;
-$topbar-item-bg: #78429d;
-$topbar-item-active-bg: #8c47b1;
-
-$genre-title-text: #783189;
-$genre-title-chevron: #aa79c6;
-
-$app-box-bg: #ffffff;
-$app-box-drp-shdw: #a694b2;
-$app-name-text: #222222;
-$app-author-text: #783189;
-$app-install-text: #783189;
-$app-description-text: #222222;
-$app-install-bg: #eee4f4;
-$app-install-icon-col: #c9add0;
-$star-col: #783189;
-$star-faded-col: #783189; // THIS IS CLEARLY WRONG
-$app-price-col: #783189;
-$app-price-free-col: #44c963;
-$free-text: #344c96; // THIS IS ALSO WRONG (GIVEN AS #344c963)
-
-$main-page-bg: #e7e4ea;
-
-$welcome-message-bg: #a58faa;
-
-$genre-popular-bg: #a58faa;
-
-// SPACING
-$topbar-height: 8.5rem;
-$topbar-logo-font-size: 2.167rem;
-$topbar-logo-icon-size: 4.583rem;
-$topbar-logo-margin-left: 2.5rem;
-$topbar-padding-bottom: 1.667rem;
-$topbar-item-margin-left: 32.083rem;
-$topbar-item-font-size: 1.167rem;
-$topbar-item-padding-lr: 1.833rem;
-$topbar-item-padding-tb: 0.833rem;
-$topbar-item-margin-right: 0.417rem;
-
-$menu-width: 26.667rem;
-$menu-item-padding-left: 2.5rem;
-$menu-font-size: 2.167rem;
-$menu-icon-size: 3.333rem;
-$menu-item-padding-tb: 2.333rem;
-$menu-box-shadow: 0.25rem 0.25rem $app-box-drp-shdw;
-
-$app-section-width: 104.167rem;
-$app-section-padding-left: 8rem;
-$app-genre-margin-top: 5.417rem;
-$app-genre-margin-bottom: 1.333rem;
-$app-container-width: 18.5%;
-$app-container-width-large: 55%;
-$app-container-min-width: 180px;
-$app-container-margin-lr: 1.167rem;
-$app-container-padding-lr: 1.667rem;
-$app-container-padding-tb: 1.25rem;
-$app-container-box-shadow: 0.083rem 0.166rem $app-box-drp-shdw;
-$app-container-margin-bottom: 4.833rem;
-$app-genre-font-size: 2rem;
-$app-image-large-width: 40.5%;
-$app-image-large-max-height: 25rem;
-$app-image-large-margin-right: 2.5rem;
-$app-name-font-size: 1.667rem;
-$app-name-large-font-size: 2.9rem;
-$app-name-line-height: 2.667rem;
-$app-author-font-size: 1.167rem;
-$app-author-large-font-size: 1.667rem;
-$app-author-line-height: 2rem;
-$app-description-large-font-size: 1.333rem;
-$star-font-size: 1.167rem;
-$star-line-height: 2rem;
-$app-install-font-size: 1.083rem;
-$app-install-padding-tb: 0.25rem;
-$app-install-padding-lr: 1.167rem;
-$app-price-font-size: 1.083rem;
-
-$welcome-message-height: 16.333rem;
-
-$genre-page-title-height: 3.333rem;
-$genre-page-popular-height: 2.5rem;
-$genre-page-popular-margin-top: 2.5rem;
-$genre-page-popular-margin-bottom: 2rem;
-
 html {
   font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   font-size: 12px;
   font-size: 0.65vw;
+
+  @media (max-width: 1200px) {
+
+    font-size: 7.8px;
+
+  }
 
   body {
     margin: 0;
@@ -114,6 +26,12 @@ html {
 }
 
 // UTILITY
+
+.flex {
+
+  display: flex;
+
+}
 
 .clearfix {
 
