--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -2,17 +2,55 @@
 
   <div class="app-item-container {{size}}">
 
-    {{#if equal size "large"}}
+    <div class="app-item-inner">
 
-      {{#with app}}
+      {{#if equal size "large"}}
 
-      <div class="image-surround">
+        {{#with app}}
 
-        <div class="image" style="background-image: url('{{image}}');"></div>
+        <div class="image-surround">
 
-      </div>
+          <div class="image" style="background-image: url('{{image}}');"></div>
 
-      <div class="text-section">
+        </div>
+
+        <div class="text-section">
+
+          <div class="app-name">{{name}}</div>
+
+          <div class="app-author">{{getUsername author}}</div>
+
+          <div class="app-rating">{{{appRating stars}}}</div>
+
+          <div class="install-price">
+
+            <div class="app-install {{#if installed}}installed{{/if}}">
+              INSTALL <i class="play icon fa fa-play"></i>
+            </div>
+
+            <div class="app-price {{#if free price}}free{{/if}}">
+              {{#if free price}}FREE{{else}}{{price}}{{/if}}
+            </div>
+
+          </div>
+
+          <div class="app-description">
+            {{prune description 300}}
+          </div>
+
+        </div>
+
+        {{/with}}
+
+      {{else}}
+
+        {{#with app}}
+
+        <div class="image-surround large">
+
+          <div class="image" style="background-image: url('{{image}}');"></div>
+
+        </div>
 
         <div class="app-name">{{name}}</div>
 
@@ -32,45 +70,11 @@
 
         </div>
 
-        <div class="app-description">
-          {{prune description 100}}
-        </div>
+        {{/with}}
 
-      </div>
+      {{/if}}
 
-      {{/with}}
-
-    {{else}}
-
-      {{#with app}}
-
-      <div class="image-surround large">
-
-        <div class="image" style="background-image: url('{{image}}');"></div>
-
-      </div>
-
-      <div class="app-name">{{name}}</div>
-
-      <div class="app-author">{{getUsername author}}</div>
-
-      <div class="app-rating">{{{appRating stars}}}</div>
-
-      <div class="install-price">
-
-        <div class="app-install {{#if installed}}installed{{/if}}">
-          INSTALL <i class="play icon fa fa-play"></i>
-        </div>
-
-        <div class="app-price {{#if free price}}free{{/if}}">
-          {{#if free price}}FREE{{else}}{{price}}{{/if}}
-        </div>
-
-      </div>
-
-      {{/with}}
-
-    {{/if}}
+    </div>
 
   </div>
 
