--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -1,9 +1,8 @@
-@import "../../stylesheets/main";
+@import "../../stylesheets/variables";
 
 .app-table {
 
   margin-left: -$app-container-margin-lr;
-  margin-right: -$app-container-margin-lr;
 
   display: flex;
   flex-direction: row;
@@ -21,150 +20,168 @@
   justify-content: space-between;
   flex-basis: $app-container-width;
   min-width: $app-container-min-width;
-  margin-left: $app-container-margin-lr;
-  margin-right: $app-container-margin-lr;
-  margin-bottom: $app-container-margin-bottom;
-  padding-top: $app-container-padding-tb;
-  padding-bottom: $app-container-padding-tb;
-  padding-left: $app-container-padding-lr;
-  padding-right: $app-container-padding-lr;
-  box-shadow: $app-container-box-shadow;
-  background-color: $app-box-bg;
+  padding-left: $app-container-margin-lr;
+  padding-right: $app-container-margin-lr;
+  padding-top: $app-container-margin-tb;
+  padding-bottom: $app-container-margin-tb;
   box-sizing: border-box;
 
-  .text-section {
+  .app-item-inner {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    flex-basis: 100% - $app-image-large-width;
+    align-items: stretch;
+    justify-content: space-between;
+    padding-top: $app-container-padding-tb;
+    padding-bottom: $app-container-padding-tb;
+    padding-left: $app-container-padding-lr;
+    padding-right: $app-container-padding-lr;
+    box-shadow: $app-container-box-shadow;
+    background-color: $app-box-bg;
+    box-sizing: border-box;
+
+    .text-section {
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      flex-basis: 100% - $app-image-large-width;
+
+    }
+
+    .image-surround {
+
+      position: relative;
+
+      .image {
+
+        content: "";
+        background-size: cover;
+        background-position: center;
+        display: block;
+        padding-top: 100%;
+
+      }
+
+    }
+
+    .app-name {
+
+      font-size: $app-name-font-size;
+      color: $app-name-text;
+      line-height: $app-name-line-height;
+
+    }
+
+    .app-author {
+
+      font-size: $app-author-font-size;
+      color: $app-author-text;
+      text-transform: uppercase;
+      line-height: $app-author-line-height;
+
+    }
+
+    .app-rating {
+
+      color: $star-col;
+      font-size: $star-font-size;
+      line-height: $star-line-height;
+
+    }
+
+    .install-price {
+
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-top: $app-installprice-margin-top;
+
+      .app-install {
+
+        font-size: $app-install-font-size;
+        color: $app-install-text;
+        background-color: $app-install-bg;
+        padding-top: $app-install-padding-tb;
+        padding-bottom: $app-install-padding-tb;
+        padding-left: $app-install-padding-lr;
+        padding-right: $app-install-padding-lr;
+
+        .icon {
+
+          color: $app-install-icon-col;
+
+        }
+
+        &.installed {
+
+
+
+        }
+
+      }
+
+      .app-price {
+
+        font-size: $app-price-font-size;
+        color: $app-price-col;
+
+        &.free {
+          color: $app-price-free-col;
+        }
+
+      }
+
+    }
 
   }
 
   &.large {
 
     flex-basis: $app-container-width-large;
-    flex-direction: row;
-    align-items: stretch;
+    min-width: $app-container-min-width * 3;
 
+    .app-item-inner {
 
-    .image-surround {
-
-      display: flex;
-      flex-basis: $app-image-large-width;
-      max-height: $app-image-large-max-height;
+      flex-direction: row;
       align-items: stretch;
-      overflow: hidden;
-      margin-right: $app-image-large-margin-right;
+      flex-grow: 1;
+      flex-shrink: 1;
 
-      .image {
+      .image-surround {
 
-        flex-basis: 100%;
+        display: flex;
+        flex-basis: $app-image-large-width;
+        align-items: stretch;
+        overflow: hidden;
+        margin-right: $app-image-large-margin-right;
 
-      }
+        .image {
 
+          flex-basis: 100%;
 
-    }
-
-    .app-name {
-
-      font-size: $app-name-large-font-size;
-
-    }
-
-    .app-author {
-
-      font-size: $app-author-large-font-size;
-
-    }
-
-    .app-description {
-
-      font-size: $app-description-large-font-size;
-      color: $app-description-text;
-
-    }
-
-  }
-
-  .image-surround {
-
-    position: relative;
-
-    .image {
-
-      content: "";
-      background-size: cover;
-      background-position: center;
-      display: block;
-      padding-top: 100%;
-
-    }
-
-  }
-
-  .app-name {
-
-    font-size: $app-name-font-size;
-    color: $app-name-text;
-    line-height: $app-name-line-height;
-
-  }
-
-  .app-author {
-
-    font-size: $app-author-font-size;
-    color: $app-author-text;
-    text-transform: uppercase;
-    line-height: $app-author-line-height;
-
-  }
-
-  .app-rating {
-
-    color: $star-col;
-    font-size: $star-font-size;
-    line-height: $star-line-height;
-
-  }
-
-  .install-price {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .app-install {
-
-      font-size: $app-install-font-size;
-      color: $app-install-text;
-      background-color: $app-install-bg;
-      padding-top: $app-install-padding-tb;
-      padding-bottom: $app-install-padding-tb;
-      padding-left: $app-install-padding-lr;
-      padding-right: $app-install-padding-lr;
-
-      .icon {
-
-        color: $app-install-icon-col;
-
-      }
-
-      &.installed {
-
+        }
 
 
       }
 
-    }
+      .app-name {
 
-    .app-price {
+        font-size: $app-name-large-font-size;
 
-      font-size: $app-price-font-size;
-      color: $app-price-col;
+      }
 
-      &.free {
-        color: $app-price-free-col;
+      .app-author {
+
+        font-size: $app-author-large-font-size;
+
+      }
+
+      .app-description {
+
+        font-size: $app-description-large-font-size;
+        color: $app-description-text;
+
       }
 
     }
