added browser policy and fixed scaling on widescreen

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -62,6 +62,7 @@ $app-genre-margin-bottom: 1.333rem;
 $app-container-width: 20%;
 $app-container-width-large: 60%;
 $app-container-min-width: 120px;
+$app-container-max-width: 200px;
 $app-container-margin-lr: 1.167rem;
 $app-container-padding-lr: 1.667rem;
 $app-container-padding-tb: 1.25rem;
