minor topbar fix

--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -15,7 +15,7 @@
 
         {{#each genres}}
 
-          <div class="genre-box {{#if active}}active{{/if}}"><a href="/genres/{{name}}" data-action="close-more-menu">{{name}}</a></div>
+          <a href="/genres/{{name}}" data-action="close-more-menu"><div class="genre-box {{#if active}}active{{/if}}">{{name}}</div></a>
 
         {{/each}}
 
