--- a/app/client/templates/components/topbar.scss
+++ b/app/client/templates/components/topbar.scss
@@ -64,6 +64,10 @@
         background-color: $topbar-item-active-bg;
       }
 
+      a {
+        color: $topbar-item-text;
+      }
+
       &.extra-genres {
 
         position: relative;
