--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -1,3 +1,17 @@
+// BREAKPOINTS
+
+$small-phone: 320px;
+$medium-phone: 360px;
+$large-phone: 480px;
+$small-tablet-phone: 720px;
+$medium-tablet: 768px;
+$large-tablet: 1024px;
+$small-screen: 1280px;
+$medium-screen: 1366px;
+$large-screen: 1440px;
+$xlarge-screen: 1600px;
+$xxlarge-screen: 1920px;
+
 // COLORS
 $menu-active-text: #ffffff;
 $menu-active-bg: #a460ba;
