updated to icon assets provided by sandstorm

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -25,7 +25,7 @@
           <div class="install-price">
 
             <div class="app-install {{#if installed}}installed{{/if}}">
-              INSTALL <i class="play icon fa fa-play"></i>
+              INSTALL <i class="icon-arrow-install"></i>
             </div>
 
             <div class="app-price {{#if free price}}free{{/if}}">
@@ -61,7 +61,7 @@
         <div class="install-price">
 
           <div class="app-install {{#if installed}}installed{{/if}}">
-            INSTALL <i class="play icon fa fa-play"></i>
+            INSTALL <i class="icon-arrow-install"></i>
           </div>
 
           <div class="app-price {{#if free price}}free{{/if}}">
