--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -108,7 +108,7 @@
         padding-left: $app-install-padding-lr;
         padding-right: $app-install-padding-lr;
 
-        .icon {
+        i {
 
           color: $app-install-icon-col;
 
