--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -3,22 +3,22 @@
   <nav class="menu-container">
 
     <div class="menu-link active">
-      <i class="fa fa-building app-market icon"></i>
+      <i class="icon-market"></i>
       <div class="menu-text">App Market</div>
     </div>
 
     <div class="menu-link">
-      <i class="fa fa-cubes installed-apps icon"></i>
+      <i class="icon-apps"></i>
       <div class="menu-text">Installed Apps</div>
     </div>
 
     <div class="menu-link">
-      <i class="fa fa-user apps-by-me icon"></i>
+      <i class="icon-my"></i>
       <div class="menu-text">Apps by Me</div>
     </div>
 
     <div class="menu-link">
-      <i class="fa fa-arrow-circle-up upload-an-app icon"></i>
+      <i class="icon-upload"></i>
       <div class="menu-text">Upload an App</div>
     </div>
 
