--- a/app/client/templates/components/menu.scss
+++ b/app/client/templates/components/menu.scss
@@ -16,7 +16,7 @@
     padding-top: $menu-item-padding-tb;
     padding-bottom: $menu-item-padding-tb;
 
-    .icon {
+    i {
       color: $menu-icon-col;
       font-size: $menu-icon-size;
       display: inline-block;
