--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -4,8 +4,7 @@
 
     <a class="logo-box" href="/">
 
-      <i class="fa fa-share-alt-square sandstorm logo"></i>
-      <div class="logo-text">Sandstorm.io</div>
+      <i class="icon-logo"></i>
 
     </a>
 
@@ -29,7 +28,7 @@
         </div>
 
         <input class="search-box" type="text" />
-        <button class="search-button"><i class="fa fa-search magnifying-glass icon"></i></button>
+        <button class="search-button"><i class="icon-search"></i></button>
 
       </div>
 
