--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -39,7 +39,7 @@ body {
     font-size: $genre-page-title-height;
   }
 
-  i.right-chevron {
+  .angle-bracket {
     color: $genre-title-chevron;
   }
 
