--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -24,8 +24,8 @@ $app-install-text: #783189;
 $app-description-text: #222222;
 $app-install-bg: #eee4f4;
 $app-install-icon-col: #c9add0;
-$star-col: #783189;
-$star-faded-col: #783189; // THIS IS CLEARLY WRONG
+$star-col-dark: #783189;
+$star-col-light: #c9add0; // THIS IS CLEARLY WRONG (GIVEN AS #c9add0)
 $app-price-col: #783189;
 $app-price-free-col: #44c963;
 $free-text: #344c96; // THIS IS ALSO WRONG (GIVEN AS #344c963)
