changed chevron icon to css class

--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -39,7 +39,7 @@ body {
     font-size: $genre-page-title-height;
   }
 
-  .angle-bracket {
+  i.icon-chevron-right {
     color: $genre-title-chevron;
   }
 
