--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -52,7 +52,8 @@
 .icon-star:before,
 .icon-tw:before,
 .icon-updated:before,
-.icon-upload:before {
+.icon-upload:before,
+.icon-chevron-right:before {
   display: inline-block;
   font-family: "sandstorm";
   font-style: normal;
@@ -73,6 +74,7 @@
 .icon-approved_light:before { content: "\f103"; }
 .icon-apps:before { content: "\f104"; }
 .icon-arrow-install:before { content: "\f105";   position: relative; top: -0.3em; }
+.icon-chevron-right:before { content: "\003e"; font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif; }
 .icon-edit:before { content: "\f106"; }
 .icon-fb:before { content: "\f107"; }
 .icon-flagged_dark:before { content: "\f108"; }
