--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -37,7 +37,7 @@
   {{#if routerSubsReady}}
   {{#if count apps}}
 
-  <div class="genre-name"><a href="/genres/{{this}}">{{this}} <span class="angle-bracket">></span></a></div>
+  <div class="genre-name"><a href="/genres/{{this}}">{{this}} <i class="icon-chevron-right"></i></a></div>
 
   <div class="app-table">
 
