added mobile layout

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -3,7 +3,7 @@
 $small-phone: 320px;
 $medium-phone: 360px;
 $large-phone: 480px;
-$small-tablet-phone: 720px;
+$small-tablet: 720px;
 $medium-tablet: 768px;
 $large-tablet: 1024px;
 $small-screen: 1280px;
