--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -11,6 +11,10 @@
 
     </div>
 
+    <div class="close-button">
+      <i class="close icon fa fa-close"></i>
+    </div>
+
   </div>
   {{/if}}
 
