--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -26,6 +26,37 @@ body {
 
   }
 
+  &.collapsed {
+
+    height: 0;
+
+  }
+
+  .close-button {
+
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: none;
+
+    i {
+      font-size: 2.5rem;
+      color: $welcome-message-text;
+    }
+
+  }
+
+  @media screen and (max-width: $large-phone) {
+
+    position: relative;
+
+    .close-button {
+
+      display: block;
+
+    }
+  }
+
 }
 
 .genre-name {
