--- a/app/client/templates/components/menu.scss
+++ b/app/client/templates/components/menu.scss
@@ -15,6 +15,7 @@
     padding-left: $menu-item-padding-left;
     padding-top: $menu-item-padding-tb;
     padding-bottom: $menu-item-padding-tb;
+    overflow: hidden;
 
     .icon {
       color: $menu-icon-col;
@@ -60,6 +61,24 @@
 
   }
 
+  @media screen and (max-width: $large-phone) {
+
+    position: relative;
+    width: 100%;
+
+    &:not(.open) {
+
+      .menu-link:not(.active) {
+
+        height: 0;
+        padding: 0;
+
+      }
+
+    }
+
+  }
+
 }
 
 .menu-spacer {
@@ -69,6 +88,12 @@
 
   &+* {
     flex-grow: 1;
+  }
+
+  @media screen and (max-width: $large-phone) {
+
+    display: none;
+
   }
 
 }
