--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -39,7 +39,7 @@ $app-description-text: #222222;
 $app-install-bg: #eee4f4;
 $app-install-icon-col: #c9add0;
 $star-col-dark: #783189;
-$star-col-light: #c9add0; // THIS IS CLEARLY WRONG (GIVEN AS #c9add0)
+$star-col-light: #c9add0; // THIS IS CLEARLY WRONG (GIVEN AS #783189)
 $app-price-col: #783189;
 $app-price-free-col: #44c963;
 $free-text: #344c96; // THIS IS ALSO WRONG (GIVEN AS #344c963)
@@ -74,6 +74,10 @@ $app-section-padding-left: 8rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
 $app-container-width: 20%;
+$app-container-width-small-screen: 25%;
+$app-container-width-large-tablet: 33%;
+$app-container-width-medium-tablet: 50%;
+$app-container-width-large-phone: 100%;
 $app-container-width-large: 60%;
 $app-container-min-width: 120px;
 $app-container-max-width: 200px;
