--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="close-button">
-      <i class="close icon fa fa-close"></i>
+      <i class="icon-rejected_dark"></i>
     </div>
 
   </div>
