--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -11,6 +11,7 @@ body {
   width: 100%;
   height: $welcome-message-height;
   background-color: $welcome-message-bg;
+  overflow: hidden;
 
   .message {
 
@@ -46,7 +47,7 @@ body {
 
   }
 
-  @media screen and (max-width: $large-phone) {
+  @media screen and (max-width: $small-tablet) {
 
     position: relative;
 
